Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn
=======================

 o 18329 2019-01-11 michele
   In the replication fixed a loop which arose when using prioDeliveryOnInitial due to the fact that low prio messages are kept in
   the holdback: it now loops at a 1000L frequency

 o 18323 2018-09-05 michele
   added the configuration property initialCmdStop to the replication to allow scripts to be executed if you interrupt the initialCmd

 o 18320 2018-08-21 michele
   fixed a bug in replication (oracle SQL functions) which caused removal of last byte for base64 encoded columns and forced to use base64 for all
   text (to avoid XML way of handling whitespaces and other special characters)

 o 18313 2018-03-22 marcel
   Extended DispatchStatistic to allow better analysis for security plugins (for pubSessionId>0 only)

 o 18311 2018-02-22 michele
   added the possibility to replicate huge transactions in different chunks: now you can specify a maximum amount of operations
   in one single message even if the transaction is not complete. Also added some logging and fixed issues related to the SDO_GEOMETRY objects

 o 18309 2018-02-21 marcel
   Avoid loop in XmlBlasterAccess.java client library default error handler on server exception ErrorCode.USER_SECURITY_AUTHORIZATION_NOTAUTHORIZED

 o 18307 2018-02-17 marcel Release v2.2.1
   Fix blocking 10 Minutes for many slow callback clients
   Reworked DispatchWorkerPool.java, see Javadoc
   SocketCallbackImpl.java changed to be a daemon thread

 o 18298 2018-02-06 michele/marcel
   Change default DispatchWorker pool thread size from 5 to 20(server side) and 1(client side)
   Configure client side thread now with parameter "createThreadsClient"

 o 18296 2018-01-25 michele/marcel
   Better cleanup of resources on java client side connection
   to prevent a race condition loop of socket connection to server
    